KnownProblem;
some homebrew not work fine
certain game,keybord PSP freeze(BUSOSINKI etc)
doesnot work fine unknown value search
if code is reloaded & saved many times,save&reload function doesnot work
certain float,doesnot display (0.01,0.001)
as for 8byte RAMeditor,strange copy position
0x8838DBF0 moviezone,pspfat should freeze after search/save...slim user use extraram setting

2011/5/2
結果ジャンプが最大結果+1でもできたので修正
decoderでのCWCHEAT表示を廃止
リアルアドレス表示をチートメニューに全体に適用
びるどまーくに○Ｘ交換追加,コピーメニュなどの□＋○はきついので変えたとき△＋○
バイナリ設定ファイル追加,WW=ポーズ(ポーズ有りは01),XXブラウザライン(00,01),YYボタン交換(00,01),ZZリアルアドレス(00,01)
カラーのとこで□押しで保存可能
BINARY WWXXYYZZ

2011/4/28
スリープするとHOMEメニューのバッファが消されるので対策
スリープメニュー追加、一部ISOドライバー？は完全にスリープできないらしい

2011/4/27
GOでの温度計が機能しないらしいので修正(thanks,raing3)

2011/4/25
フリーズ対策のためHOME押した際スレッドを再開させるように変更
TXTサーチの文字バッファを記録しておくように変更
レジスタ表示をs8からfpにかえた

2011/4/23
テキストサーチ関連
大小無視(SEL+右)と1文字ワイルド(SEL+上,文字　.)を追加
文字指定分になってなかったので修正
カーソルのはみ出し修正
結果を残すように変更(他サーチへ引継ぎは不可)
コピー連動ジャンプ番号がずれてたので修正
LRの高速スクロール追加

2011/4/15
HOOKサーチを強化
0x003E00008 jr_raをサーチしたときにデコーダー時コピーメニュー+□で0x000001CD breakを
PSPLINK例外でひっかｋるようにサーチ結果(499件)に適用する

2011/4/12
NPR/CWCフラグ変更時bit情報を継続するように修正
JOKER/DMA時はBIT変更できないよう修正
bit変更をアライメント例外がおきない範囲で拡張(BYTE->WORD アドレス偶数,WORD->DWORD アドレス4倍数)
8bit/16bitCWCこーどが復元ありになっていたので修正
#CWC NO RESTORE FIX
0x20001000 0x11
0x20001002 0x2222
0x20001004 0x44444444
0xFF000300 0x00000000
0x20001000 0x10
0x20001002 0x2020
0x20001004 0x40404040

2011/3/31
コードアドレスを変更したときポインタコードの復号値がベースアドレス+オフセットになってなかったので修正
無効なベースアドレスの時コードが実行されていたので実行しないように修正
FFFFFFFF 00000000 //
00001000 11111111 //修正前は1000に書き込まれてしまう

2011/3/16
cwchbを使わないけどびるどできるようにした
aloader1.24/custompromethesu/prometheus以外ろだ(openisoloader/aloader120以前)は古いため廃止

2011/3/15
プロメテウス他ろだ経由のID処理を改善
サーチ結果ジャンプを結果最大以上にならないよう修正

2011/3/7
スクリーンショットが0xFFFFFFFF以外の時パッドボタンがマスクされていたので修正

2011/3/6
一部ホームブリューで起動障害が残ってるためNOHBビルドまけふぁいる追加
とりえずCUSTOM16専用しかつかえんけどアナログの左/右をパッドボタン化。カーネルパッドの未使用BITを使用。
アナログ左 0x0400 L2代用
アナログ右 0x0800 R2代用
アナログ下 0x0C00 L2+R2代用,たまにしか効かない？

2011/3/4